// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Loading ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-dy6d14"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-i7qam8-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-l7kad8-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-148a12g-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Loading ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-dy6d14"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1v5he1z-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-l7kad8-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-148a12g-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Loading ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-dy6d14"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1ov0ao7-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-13c1hty-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Loading ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-dy6d14"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1wxecgq-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-qcvzjl-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;
